# openhasp-config-manager

./: .editorconfig  .gitignore  Dockerfile  HASS_INTEGRATION.md  Makefile  README.md  example.py  example_image.py  example_jsonl.py  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codespell.yml  dockerx-latest.yml  python_publish.yaml  pythonpackage.yml  release_drafter.yml
openhasp_config_manager/: __init__.py  cli.py  const.py  manager.py  mqtt_client.py  openhasp.py  processor.py  uploader.py  util.py
openhasp_config_manager/ad/: README.md  __init__.py  controller.py  util_ad.py  util_ad_timer.py  util_openhasp.py
openhasp_config_manager/ad/objects/: __init__.py  button.py  checkbox.py  image.py  label.py  progress.py  slider.py  switch.py
openhasp_config_manager/ad/page/: __init__.py  state_updater.py
openhasp_config_manager/ad/plate/: __init__.py  deployment.py  screen.py
openhasp_config_manager/cli/: __init__.py  cmd.py  common.py  deploy.py  generate.py  gui.py  listen.py  logs.py  screenshot.py  shell.py  state.py  upload.py  vars.py
openhasp_config_manager/gui/domain/: plate_session.py  plate_state_holder.py
openhasp_config_manager/gui/qt/: components.py  file_browser.py  main.py  util.py
openhasp_config_manager/gui/qt/widgets/: device_controls.py  device_list.py
openhasp_config_manager/gui/qt/widgets/pagelayout/: __init__.py  editor_controls.py  jsonl_preview.py  openhasp_widget_picker.py  openhasp_widget_property_editor.py  page_layout_editor.py  page_preview_layout.py
openhasp_config_manager/gui/qt/widgets/pagelayout/openhasp_widgets/: bar.py  button.py  editable_widget.py  image.py  label.py  slider.py  switch.py
openhasp_config_manager/gui/qt/widgets/uicomponents/: value_tracking_slider.py
openhasp_config_manager/model/: __init__.py
openhasp_config_manager/openhasp_client/: icons.py  image_processor.py  mqtt_client.py  openhasp.py  telnet_client.py  webservice_client.py
openhasp_config_manager/openhasp_client/model/: component.py  config.py  debug_config.py  device.py  device_config.py  http_config.py  mqtt_config.py  openhasp_config_manager_config.py  telnet_config.py
openhasp_config_manager/openhasp_client/model/configuration/: config.py  device_config.py  gui_config.py  hasp_config.py  screen_config.py  website_config.py  wifi_config.py
openhasp_config_manager/processing/: __init__.py  device_processor.py  jsonl.py  template_rendering.py  util.py  variables.py
openhasp_config_manager/processing/jsonl/: __init__.py  jsonl.py
openhasp_config_manager/processing/preprocessor/: jsonl_preprocessor.py
openhasp_config_manager/ui/: components.py  dimensions.py  util.py
openhasp_config_manager/ui/qt/: components.py  device_list.py  file_browser.py  main.py  page_layout_editor.py  util.py
openhasp_config_manager/ui/qt/pagelayout/: __init__.py  device_controls.py  editor_controls.py  jsonl_preview.py  openhasp_widgets.py  page_layout_editor.py  page_preview_layout.py
openhasp_config_manager/ui/qt/pagelayout/openhasp_widgets/: bar.py  button.py  image.py  label.py  slider.py  switch.py
openhasp_config_manager/ui/qt/widgets/: device_controls.py  device_list.py
openhasp_config_manager/ui/qt/widgets/pagelayout/: __init__.py  editor_controls.py  openhasp_widget_picker.py  page_layout_editor.py  page_preview_layout.py
openhasp_config_manager/ui/qt/widgets/pagelayout/openhasp_widgets/: label.py
openhasp_config_manager/validation/: __init__.py  cmd.py  device_validator.py  jsonl.py
tests/: __init__.py  manager_analyze_test.py  manager_process_test.py  manager_test.py  processor_test.py  util_test.py  variable_manager_test.py
tests/_test_cfg_root/common/: offline.cmd  online.cmd
tests/_test_cfg_root/devices/test_device/: config.json  home.cmd  vars.yaml  vars2.yaml
tests/_test_cfg_root/devices/test_device/home/: test_page.jsonl
tests/ad/: openhasp_controller_test.py
tests/openhasp_client/: mqtt_client_test.py
tests/processing/: device_processor_test.py  template_rendering_test.py  util_test.py  variable_manager_test.py
tests/processing/preprocessor/: jsonl_preprocessor_test.py
tests/test_cfg_root/: global.vars.yaml
tests/test_cfg_root/common/: global.vars.yaml
tests/test_cfg_root/common/dialog/: connected.jsonl  offline.jsonl
tests/test_cfg_root/devices/test_device/: home.cmd
tests/test_cfg_root/devices/test_device/home/: page.jsonl
tests/validation/: cmd_validator_test.py  device_validator_test.py  jsonl_object_validator_test.py
