[tool.poetry]
name = "openhasp-config-manager"
version = "0.7.0"
description = "A tool to manage all of your openHASP device configs in a centralized place."

license = "AGPL-3.0-or-later"

authors = [
    "Markus Ressel <mail@markusressel.de>",
]

readme = 'README.md'

repository = "https://github.com/markusressel/openhasp-config-manager"
homepage = "https://github.com/markusressel/openhasp-config-manager"

keywords = ['openhasp', 'config', 'management']

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"  # Compatible python versions must be declared here

click = "8.3.1"
requests = "2.32.5" # taken from appdaemon 4.5.0
aiohttp = ">=3.9.0,<3.14.0" # taken from appdaemon 4.5.0
temppathlib = "1.2.0"
Jinja2 = "3.1.6"
py-range-parse = "1.0.6"
pyyaml = "6.0.3"

multidict = "6.7.0"
frozenlist = "1.8.0"
yarl = "1.22.0"

orjson = "3.11.5"
aiomqtt = "*" # compromise to get it working with appdaemon 4.5.0
paho-mqtt = ">= 1.6.1,< 2.2.0" # taken from appdaemon 4.5.0
telnetlib3 = "2.0.8"
pillow = "12.1.0"

[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
PyQt6 = "6.10.1"
QtAwesome = "1.4.0"
qasync = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest_asyncio = "*"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project]
name = "openhasp-config-manager"

[project.scripts]
openhasp-config-manager = 'openhasp_config_manager.cli:cli'